# esl

./: .gitignore  ALGORITHM.md  ALGORITHM_CURRENT.md  ALGORITHM_TARGET.md  ESL_PSEUDOCODE.md  LICENSE  PRD.md  README.md  code_Changes_2.md  code_changes_by_divyanshi.md  experiment_feasibility.md  pyproject.toml  requirements.txt
esl/: __init__.py  __main__.py  beliefs.py  config.py  experiment_two_type_separation.py  games.py  hand_trace.py  interaction_protocol.py  metrics.py  plot_esl_mechanism.py  plot_neurips.py  plot_observability_separation.py  plotting.py  prototypes.py  signals.py  synthetic_population.py  trainer.py
esl/experiments/: __init__.py  __main__.py  aggregate.py  manifest.py  presets.py  prototype_recovery_sweep.py  runner.py  sparse_pobs_sweep.py
esl/utils/: __init__.py  simplex.py
runs/ipd_20_1000/: aggregate_results.json  experiment_manifest.json
runs/ipd_20_10K/: aggregate_results.json  experiment_manifest.json
runs/ipd_20_3000/: aggregate_results.json  experiment_manifest.json
runs/ipd_20agents_500rounds/: aggregate_results.json  experiment_manifest.json
scripts/: reproduce_paper_figures.sh  run_neurips_sweeps.sh
tests/: TEST_PLAN.md  conftest.py  test_batch_pre_bayes_snapshot.py  test_beliefs.py  test_esl_schedule.py  test_metrics.py  test_metrics_mce_belief.py  test_neurips_aggregate.py  test_neurips_presets.py  test_plot_neurips_smoke.py  test_prototypes.py  test_sparse_pobs_sweep.py  test_summary_reporting.py  test_synthetic_population.py  test_trainer_integration.py  test_trainer_layering.py  test_two_timescale.py
(+931 files in other folders)
